# any_iced

./: Cargo.toml
core/src/: background.rs  border.rs  gradient.rs  rectangle.rs  renderer.rs  transformation.rs
core/src/widget/: text.rs
examples/canvas/: Cargo.toml
examples/canvas/src/: main.rs
examples/custom_primitive/: Cargo.toml
examples/custom_primitive/src/: main.rs  scene.rs
examples/gradient_v2/: Cargo.toml
examples/gradient_v2/src/: main.rs
graphics/src/: geometry.rs  gradient.rs  lib.rs  mesh.rs
graphics/src/geometry/: cache.rs  fill.rs  frame.rs  path.rs  stroke.rs  style.rs
graphics/src/geometry/path/: builder.rs
renderer/src/: fallback.rs
src/: lib.rs
test/src/: emulator.rs
tiny_skia/src/: engine.rs  geometry.rs  lib.rs
wgpu/: Cargo.toml
wgpu/src/: buffer.rs  engine.rs  geometry.rs  layer.rs  lib.rs  offscreen.rs  primitive.rs  quad.rs  triangle.rs
wgpu/src/geometry/: clip.rs  coverage_aa.rs  dashed.rs  flat.rs
wgpu/src/image/: mod.rs
wgpu/src/quad/: gradient.rs
wgpu/src/shader/: gradient.wgsl
wgpu/src/shader/quad/: quad_gradient_v2.wgsl
wgpu/src/shader/triangle/: gradient.wgsl  gradient_v2.wgsl  solid.wgsl
wgpu/src/triangle/: msaa.rs
widget/src/: button.rs  canvas.rs  container.rs  helpers.rs  themer.rs  tooltip.rs
widget/src/canvas/: program.rs
widget/src/pane_grid/: title_bar.rs
winit/src/: lib.rs
