[package]
name = "custom_primitive"
version = "0.1.0"
authors = ["Jx"]
edition = "2024"

[dependencies]
iced.workspace = true
iced.features = ["canvas","debug", "image", "advanced"]

image.workspace = true
bytemuck.workspace = true

glam.workspace = true
glam.features = ["bytemuck"]

rand = "0.8.5"
